Fixing the collapser position(cannot use auto left for some reason)

--- a/src/components/ServicePane.scss
+++ b/src/components/ServicePane.scss
@@ -18,13 +18,13 @@
         }
 
         .collapser-message-text {
-            margin-left: 100px;
+            margin-left: 9.5em;
+            margin-right: 9px;
             flex-grow: 1;
-            padding-right: 7px;
+            padding-right: 15px;
             width: 83px;
             white-space: nowrap;
             overflow: hidden;
-            text-overflow: ellipsis;
         }
 
         .collapser-header {
